znuny/znuny.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: znuny-sts
  labels:
    service: znuny-svc
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: znuny-svc
  replicas: 1
  selector:
    matchLabels:
      service: znuny-svc
  template:
    metadata:
      labels:
        service: znuny-svc
    spec:
      containers:
        - name: znuny
          image: ghcr.io/eol-uchile/eol-otrs:znuny-6.5.25-eol1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 4Gi
              cpu: 400m
            limits:
              memory: 5Gi
              cpu: 750m
---
apiVersion: v1
kind: Service
metadata:
  name: znuny-svc
spec:
  selector:
    service: znuny-svc
  ports:
    - name: "http"
      port: 80
      targetPort: 80
