znuny/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: znuny-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: znuny-ingress-certificate
      hosts:
        - eol-ayuda.uchile.cl
  rules:
    - host: eol-ayuda.uchile.cl
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: znuny
                port:
                  number: 80
