znuny/listenerset.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: znuny-https-route
  namespace: znuny
spec:
  hostnames:
    - eol-ayuda.uchile.cl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: znuny-listeners
      namespace: znuny
      sectionName: eol-ayuda-uchile-cl-https
  rules:
    - backendRefs:
        - name: znuny-svc
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
